# fast-api

./: .gitignore  LICENSE  README.md  pyproject.toml
kafka/: README.md  docker-compose.yml  pyproject.toml
kafka/kafka-python-producer/: producer.py  wikimedia-producer.py
scripts/: main.py
simpleapp/: README.md  config.ini  pyproject.toml
simpleapp/app/: database.py  main.py  models.py
simpleapp/templates/: about.html  index.html
templates/: contact.html  index.html  index_details.html
tf/CommonModules/AWSLambda/: Main.tf  outputs.tf  variables.tf
tf/CommonModules/AWSLambdaPermission/: Main.tf  Outputs.tf  Variables.tf
tf/CommonModules/AWSS3BucketNotification/: Main.tf  variables.tf
tf/CommonModules/GlueCrawler/: Main.tf  Outputs.tf  Variables.tf
tf/CommonModules/GlueDatabase/: Main.tf  outputs.tf  variables.tf
tf/CommonModules/Role/: Main.tf  Outputs.tf  Variables.tf
tf/CommonModules/RolePolicy/: Main.tf  Variables.tf
tf/CommonModules/S3/: Main.tf  Outputs.tf  Variables.tf
tf/KafkaProject/: Main.tf  Modules.tf  Variables.tf
tf/KafkaProject/aws/: AWSGlue.tf  Backend.tf  Locals.tf  Main.tf  Role.tf  S3.tf  Variables.tf
