[tool.poetry]
name = "learnfastapi"
version = "0.1.0"
description = ""
authors = ["Moein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"
black = "^23.7.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
