[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Moein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
isort = "^5.12.0"
black = "^23.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
